--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -52,6 +52,18 @@
         </activity>
         
         
+        <!-- Take the photo activity -->
+        <activity
+            android:name=".TakePhoto"
+            android:label="@string/app_name" 
+            android:uiOptions="splitActionBarWhenNarrow"
+            >
+            <!-- The (android:uiOptions="splitActionBarWhenNarrow") is used to move the options bar to the bottom of the screen if there is limited room 
+            Reference: http://www.sitepoint.com/better-user-interfaces-android-action-bar/ 
+            for more info -->
+ 
+        </activity>
+                
         <!-- This activity is for shared preferences-->
         <activity       
             android:name=".SharedPrefs"
